edit about, base, blog, contact, courses.html page

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
@@ -73,8 +73,8 @@
 
                         <div class="header-bar-menu">
                             <ul class="flex justify-content-center align-items-center py-2 pt-md-0">
-                                <li><a href="signup.html">Signup</a></li>
-                                <li><a href="login.html">Login</a></li>
+                                <li><a href="signup">Signup</a></li>
+                                <li><a href="login">Login</a></li>
                             </ul>
                         </div><!-- .header-bar-menu -->
                     </div><!-- .col -->
@@ -89,18 +89,18 @@
                     <div class="col-9 col-lg-3">
                         
                         <div class="site-branding">
-                            <h1 class="site-title"><a href="index.html" rel="home">AI<span>ALIENEER</span></a></h1>
+                            <h1 class="site-title"><a href="index" rel="home">AI<span>ALIENEER</span></a></h1>
                         </div><!-- .site-branding -->
                     </div><!-- .col -->
 
                     <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                         <nav class="site-navigation flex justify-content-end align-items-center">
                              <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li class="current-menu-item"><a href="index.html">Home</a></li>
-                                <li class="current-menu-item"><a href="about.html">About</a></li>
-                                <li class="current-menu-item"><a href="courses.html">Courses</a></li>
-                                <li class="current-menu-item"><a href="blog.html">Blog</a></li>
-                                <li class="current-menu-item"><a href="contact.html">Contact</a></li>
+                                <li class="current-menu-item"><a href="index">Home</a></li>
+                                <li class="current-menu-item"><a href="about">About</a></li>
+                                <li class="current-menu-item"><a href="courses">Courses</a></li>
+                                <li class="current-menu-item"><a href="blog">Blog</a></li>
+                                <li class="current-menu-item"><a href="contact">Contact</a></li>
                             </ul>
 
                             <div class="hamburger-menu d-lg-none">
@@ -163,7 +163,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="foot-about">
-                            <a class="foot-logo" href="index.html"><img src="{% static 'aialieneer/images/logoo.png' %}" alt=""></a>
+                            <a class="foot-logo" href="index"><img src="{% static 'aialieneer/images/logoo.png' %}" alt=""></a>
 
                             <p>They are not excepteur cupidatat excepteur blinds, there are the offices of dese is soothing to the soul, that is to blame is he who from your troubles. </p>
 
@@ -190,10 +190,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <h2 class="w-100">Quick Links</h2>
 
                              <ul class="w-50">
-                                <li><a href="about.html">About </a></li>
+                                <li><a href="about">About </a></li>
                                 <li><a href="#">Terms of Use </a></li>
                                 <li><a href="#">Privacy Policy </a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact">Contact Us</a></li>
                             </ul>
 
                             <ul class="w-50">
