edit songle course and post.html

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/index.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/index.html
@@ -115,14 +115,14 @@
                     <header class="heading flex justify-content-between align-items-center">
                         <h2 class="entry-title">Featured Courses</h2>
 
-                        <a class="btn mt-4 mt-sm-0" href="single-courses">view all</a>
+                        <a class="btn mt-4 mt-sm-0" href="single_courses">view all</a>
                     </header><!-- .heading -->
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-6">
                     <div class="course-content flex flex-wrap justify-content-between align-content-lg-stretch">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -137,7 +137,7 @@
                                     <span class="course-ratings-count">(4 votes)</span>
                                 </div><!-- .course-ratings -->
 
-                                <h2 class="entry-title"><a href="single-courses">The Complete Android Developer Course</a></h2>
+                                <h2 class="entry-title"><a href="single_courses">The Complete Android Developer Course</a></h2>
 
                                 <div class="entry-meta flex flex-wrap align-items-center">
                                     <div class="course-author"><a href="#">Ms. Lara Croft </a></div>
@@ -158,7 +158,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="course-content flex flex-wrap justify-content-between align-content-lg-stretch">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -173,7 +173,7 @@
                                     <span class="course-ratings-count">(4 votes)</span>
                                 </div><!-- .course-ratings -->
 
-                                <h2 class="entry-title"><a href="single-courses">Learn Photoshop, Web Design & Profitable</a></h2>
+                                <h2 class="entry-title"><a href="single_courses">Learn Photoshop, Web Design & Profitable</a></h2>
 
                                 <div class="entry-meta flex flex-wrap align-items-center">
                                     <div class="course-author"><a href="#">Mr. John Wick</a></div>
@@ -345,7 +345,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -381,7 +381,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -417,7 +417,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/3.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/3.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -453,7 +453,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/4.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/4.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -489,7 +489,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/5.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/5.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -525,7 +525,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses"><img src="{% static 'aialieneer/images/6.jpg' %}" alt=""></a>
+                            <a href="single_courses"><img src="{% static 'aialieneer/images/6.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -577,7 +577,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="featured-event-content">
                         <figure class="event-thumbnail position-relative m-0">
-                            <a href="single-post"><img src="{% static 'aialieneer/images/event-1.jpg' %}" alt=""></a>
+                            <a href="single_post"><img src="{% static 'aialieneer/images/event-1.jpg' %}" alt=""></a>
 
                             <div class="posted-date position-absolute">
                                 <div class="day">23</div>
@@ -598,7 +598,7 @@
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <div class="event-content flex flex-wrap justify-content-between align-content-stretch">
                         <figure class="event-thumbnail">
-                            <a href="single-post"><img src="{% static 'aialieneer/images/event-2.jpg' %}" alt=""></a>
+                            <a href="single_post"><img src="{% static 'aialieneer/images/event-2.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="event-content-wrap">
@@ -624,7 +624,7 @@
 
                     <div class="event-content flex flex-wrap justify-content-between align-content-lg-stretch">
                         <figure class="event-thumbnail">
-                            <a href="single-post"><img src="{% static 'aialieneer/images/event-3.jpg' %}" alt=""></a>
+                            <a href="single_post"><img src="{% static 'aialieneer/images/event-3.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="event-content-wrap">
@@ -655,59 +655,59 @@
     <section class="home-gallery">
         <div class="gallery-wrap flex flex-wrap">
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/a.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/a.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/b.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/b.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x2">
-                <a href="single-post"><img src="{% static 'aialieneer/images/c.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/c.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/d.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/d.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/e.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/e.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/g.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/g.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/h.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/h.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/i.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/i.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x2 ">
-                <a href="single-post"><img src="{% static 'aialieneer/images/j.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/j.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/k.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/k.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/l.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/l.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/m.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/m.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid3x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/n.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/n.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post"><img src="{% static 'aialieneer/images/o.jpg' %}" alt=""></a>
+                <a href="single_post"><img src="{% static 'aialieneer/images/o.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
         </div><!-- .gallery-wrap -->
     </section><!-- .home-gallery -->
