fix error base2, forgot-password, login, signup.gtml

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/forgot-password.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/forgot-password.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
     {% extends 'aialieneer/base2.html' %}
 
     {% block title %}  Forgot Password  {% endblock %}
     
-{% block body %}
-<body class="bg-gradient-primary">
 
+<body class="bg-gradient-primary">
+    {% block body %} 
+    {% load static %}
     <div class="container">
         <!-- Outer Row -->
         <div class="row justify-content-center">
@@ -53,7 +52,4 @@
         </div>
 
     </div>
-
-</body>
-{% endblock %}
-</html>
+    {% endblock %}
