--- a/Al_ALIENEER/aialieneer/templates/aialieneer/signup.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/signup.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
 {% extends 'aialieneer/base2.html' %}
 
 {% block title %}  Signup  {% endblock %}
 
-{% block body %}
-
 <body class="bg-gradient-primary">
+    {% block body %} 
+    {% load static %}
     <div class="container">
 
         <div class="card o-hidden border-0 shadow-lg my-5">
@@ -70,6 +67,4 @@
         </div>
 
     </div>
-</body>
 {% endblock %}
-</html>
