--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base2.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base2.html
@@ -1,7 +1,6 @@
+{% load static %}
 <!DOCTYPE html>
-{% load static%}
 <html lang="en">
-{% block head %}
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- <title>Login</title> -->
-    {% block title %}  Login  {% endblock %}
-
     <!-- Custom fonts for this template-->
+    {% block css %}
     <link rel="stylesheet" href="{% static 'aialieneer/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'aialieneer/css/ai-eng-2.min.css' %}">
     <link href="{static 'aialieneer/vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
@@ -21,80 +18,14 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="{{url_for('static', filename = 'css/ai-eng-2.min.css')}}" rel="stylesheet">
-    {% block extra_css %}{% endblock %}
+    <link href="{static 'css/ai-eng-2.min.css'}" rel="stylesheet">
+    {% endblock %}
 </head>
-{% endblock %}
 
+{% block body %} {% endblock %}
 
-<body class="bg-gradient-primary">
-
-    <div class="container">
-
-        <!-- Outer Row -->
-        <div class="row justify-content-center">
-
-            <div class="col-xl-10 col-lg-12 col-md-9">
-
-                <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
-                        <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                                    </div>
-                                    <form class="user" name="login_form">
-                                        <div class="form-group">
-                                            <input type="email" name="email" class="form-control form-control-user"
-                                                id="Email" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address..." 
-                                                required>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password" name="password" class="form-control form-control-user"
-                                                id="Password" placeholder="Password" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
-                                            </div>
-                                        </div>
-                                        <a href="{{url_for('login')}}" class="btn btn-primary btn-user btn-block">
-                                            Login
-                                        </a>
-                                        <hr>
-                                        <a href="{{url_for('login')}}" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Login with Google
-                                        </a>
-                                        <a href="{{url_for('login')}}" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                        </a>
-                                    </form>
-                                    <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="{{url_for('forgot_password')}}">Forgot Password?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="{{url_for('register')}}">Create an Account!</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
     
-
+    {% block javascript %}
     <!-- Bootstrap core JavaScript-->
     <script src="{% static 'aialieneer/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'aialieneer/vendor/jquery/bootstrap.bundle.min.js' %}"></script>
@@ -103,15 +34,14 @@
     <script src="{% static 'vendor/jquery/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="{% static'aialieneer/js/ai-eng-2.min.js' %}"></script>
+    <script src="{% static 'aialieneer/js/ai-eng-2.min.js' %}"></script>
     
     <!-- Page level plugins -->
-    <script src="{{url_for('static', filename = 'vendor/chart.js/Chart.min.js')}}"></script>
+    <script src="{static 'vendor/chart.js/Chart.min.js'}"></script>
 
     <!-- Page level custom scripts -->
-    <script src="{{url_for('static', filename = 'js/demo/chart-area-demo.js')}}"></script>
-    <script src="{{url_for('static', filename = 'js/demo/chart-pie-demo.js')}}"></script>
+    <script src="{static 'js/demo/chart-area-demo.js'}"></script>
+    <script src="{static' 'js/demo/chart-pie-demo.js'}"></script>
+    {% endblock %}
 
-</body>
-{% endblock %}
 </html>
