--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="{% static 'aialieneer/css/swiper.min.css' %}">
 
     <!-- All.Min CSS -->
-    <link href="{static 'aialieneer/vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
+    <!-- <link href="{static 'aialieneer/vendor/fontawesome-free/css/all.min.css'}" rel="stylesheet" type="text/css"> -->
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
